Chatterbot updatet übersetzt engl franz

--- a/chatterbot.html
+++ b/chatterbot.html
@@ -42,16 +42,38 @@ td {
 //var convpatterns = Satz durch Mensch, es schaut sich den Input an und antworten dann darauf/sucht sich dann eine Antwort aus
 
 var convpatterns = new Array (
-  new Array (".*Salut.*","Bonjour."),
-  new Array ("^Je (?: souhaite|voudrais bien )(?:je pourrais |Je serais capable de faire )(.*)\.","C'est comment d'être capable de faire $1?"),
-  new Array ("J'ai besoin de (.*)\." , "Pourqoui vous avez besoin de $1?", "Would it really help you to get $1?" , "Are you sure you need $1?"),
+  //new Array (".*hello.*","Greetings."),
+  new Array ("(.*)(?:[Bb]onjour|[Ss]alut|[Cc]oucou)(.*)","Bonjour, comment est-ce je pourrais vous aider ?"),
+    //Gruppierungen in den Klammern []
+
+  // new Array ("^I (?:wish |would like )(?:I could |I was able to |to be able to )(.*)\.","What would it be like to be able to $1?"),
+  new Array ("^Je (?:souhaite |voudrais bien )(?:Je pourrais |Je serais capable de faire )(.*)\.","C'est comment d'être capable de faire $1?"),
+//$1/$2 kopiert das Wort/den Abschnitt der im Bereich .* ist
+
+//new Array ("I need (.*)\." , "Why do you need $1?", "Would it really help you to get $1?" , "Are you sure you need $1?"),
+  new Array ("J'ai besoin de(.*)\." , "Pourqoui vous avez besoin de$1?", "Est-il vraiment necessaire que vous avez besoin de$1?" , "Est-ce que vous êtes sûr d'avoir besoin de$1?"),
+
 //  new Array ("^When(.*) stole (.*)\.","What happened when $2 was stolen?","And how did you feel then?","Was $2 ever found?"),
-new array ("^Quand (.*) vole" (.*)\.", "Qu'est-ce qu'est)
-  new Array ("I'd really like to (.*)\.","If you had the chance to $1, what would happen next?","Well then, I hope you get to $1."),
-  new Array ("Why don't you (.*?)[\?]" , "Do you really think I don't $1?","Perhaps eventually I will $1.","Do you really want me to $1?"),
-  new Array ("Why can't I (.*?)[\?]" , "Do you think you should be able to $1?","If you could $1, what would you do?",	"I don't know -- why can't you $1?","Have you really tried?"),
+// Achtung: nur vole bedeutet, dass er die nous-Form beispielweise nicht erknnen würde, sprich nicht darauf antworten könnte; hier beachten: Passe composé da Vergangenheit!
+  new Array ("^Quand (.*)(?:ai |as |a |avons |avez |ont )volé(.*)\.","Qu'est-ce qu'a passé quand vous avez volé $2"),
+  //(?:bedeutet ODER)
+
+//new Array ("I'd really like to (.*)\.","If you had the chance to $1, what would happen next?","Well then, I hope you get to $1."),
+  new Array ("J'ai envie de (.*)\.","Si vous auriez eu la possibilité de $1, qu'est-ce qu'aurait passé au suivant?","D'accord, j'espère que vous allez avoir la possibilité de $1."), //warum löscht er den letzten Buchstaben? Ob man einen Punkt oder nicht setzt bestimmt das
+
+  //new Array ("Why don't you (.*?)[\?]" , "Do you really think I don't $1?","Perhaps eventually I will $1.","Do you really want me to $1?"),
+  new Array ("Pourquoi vous ne pouvez pas (.*?)[\?]" , "Vous pensez vraiment je ne peux pas $1?","Peut-être je vais $1.","Vous voulez vraiment que je peux $1?"),
+//Possesivbegleiter umwandeln? -> möglich durch irgendeine Funktion? -> Steigerung eventuell möglich
+// kann festgelegt werden, dass es immer egal ist, ob man groß oder klein schreibt? Durchgehend für die Aufgabe! Klappt CHECK
+
+
+  //new Array ("Why can't I (.*?)[\?]" , "Do you think you should be able to $1?","If you could $1, what would you do?",	"I don't know -- why can't you $1?","Have you really tried?"),
+  new Array ("Pourquoi je ne peux pas (.*?)[\?]" , "Vous pensez qu'il est necessaire de $1?","Si vous pensez de ne peux pas $1, qu'est-ce que vous pourriez faire ?",	"Je ne sais pas -- Pourquoi vous ne pouvez pas $1?","Vous avez déjà l'essayé ?"),
+
   new Array ("I can't (.*) you\.","How do you know you can't $1 me?","Perhaps you could $1 me if you tried.",	"What would it take for you to $1 me?"),
+
   new Array ("I can't (.*)\.","How do you know you can't $1?","Perhaps you could $1 if you tried.",	"What would it take for you to $1?"),
+
   new Array ("Are you (.*?)[\?]","Why does it matter whether I am $1?","Would you prefer it if I were not $1?","Perhaps you believe I am $1.","I may be $1 -- what do you think?"),
   new Array ("What (.*?)[\?]",	"Why do you ask?","How would an answer to that help you?","What do you think?"),
   new Array ("How (.*?)[\?]","How do you suppose?","Perhaps you can answer your own question.","What is it you're really asking?"),
@@ -79,19 +101,24 @@ new array ("^Quand (.*) vole" (.*)\.", "Qu'est-ce qu'est)
   new Array ("I want (.*)\.", "What would it mean to you if you got $1?","Why do you want $1?","What would you do if you got $1?","If you got $1, then what would you do?"),
   new Array (".*( the highway| the road).*","The highway is for gamblers, you better use your sense."),
 
-// wenn Schlüsselwörter/Trigger wie Mother, father, child, ... fallen, kommen die folgenden Sätze
+// wenn Schlüsselwörter/Trigger wie mère, père, enfant, ... fallen, kommen die folgenden Sätze
 
-  new Array ("(.*) mother(.*)\.",	"Tell me more about your mother.","What was your relationship with your mother like?",	"How do you feel about your mother?","How does this relate to your feelings today?","Good family relations are important."),
-  new Array ("(.*) father(.*)\.","Tell me more about your father.", "How did your father make you feel?","How do you feel about your father?","Does your relationship with your father relate to your feelings today?",	"Do you have trouble showing affection with your family?"),
-  new Array ("(.*) child(.*)\.","Did you have close friends as a child?",	"What is your favorite childhood memory?","Do you remember any dreams or nightmares from childhood?","Did the other children sometimes tease you?","How do you think your childhood experiences relate to your feelings today?"),
-  new Array ("(.*) your fav(o|ou)rite(.*?)[\?]","I really don't have a favorite.","I have so many favorites it's hard to choose one."),
+//  new Array ("(.*) mother(.*)\.",	"Tell me more about your mother.","What was your relationship with your mother like?",	"How do you feel about your mother?","How does this relate to your feelings today?","Good family relations are important."),
+  new Array ("(.*) mère(.*)\.",	"Tell me more about your mother.","What was your relationship with your mother like?",	"How do you feel about your mother?","How does this relate to your feelings today?","Good family relations are important."),
+//  new Array ("(.*) father(.*)\.","Tell me more about your father.", "How did your father make you feel?","How do you feel about your father?","Does your relationship with your father relate to your feelings today?",	"Do you have trouble showing affection with your family?"),
+  new Array ("(.*) père(.*)\.","Tell me more about your father.", "How did your father make you feel?","How do you feel about your father?","Does your relationship with your father relate to your feelings today?",	"Do you have trouble showing affection with your family?"),
+//  new Array ("(.*) child(.*)\.","Did you have close friends as a child?",	"What is your favorite childhood memory?","Do you remember any dreams or nightmares from childhood?","Did the other children sometimes tease you?","How do you think your childhood experiences relate to your feelings today?"),
+  new Array ("(.*) enfant(.*)\.","Did you have close friends as a child?",	"What is your favorite childhood memory?","Do you remember any dreams or nightmares from childhood?","Did the other children sometimes tease you?","How do you think your childhood experiences relate to your feelings today?"),
+//  new Array ("(.*) your fav(o|ou)rite(.*?)[\?]","I really don't have a favorite.","I have so many favorites it's hard to choose one."),
+  new Array ("(.*) (?: ta|ton |tes |votre |vos )(.*?) préféré [\?]","I really don't have a favorite.","I have so many favorites it's hard to choose one."),
+//préféré mehrere Möglichkeiten - er/sie/es soll die verwendete benutzen?!
 
-// egal was hauptsache Fragezeichen [\?] ->
-
+// egal was Hauptsache Fragezeichen [\?] ->
   new Array ("(.*?)[\?]","Hmm, not sure I know..", "That's an interesting question...",  "Gosh, I'm not sure I can answer that...","Why do you ask that?","Please consider whether you can answer your own question.",	"Perhaps the answer lies within yourself?","Why don't you tell me?", "If you knew that in one year you would die suddenly, would you change anything about the way you are living now?"),
 
+
 // .* da kommt einfach eine Antwort, da er/sie nicht weiß was er antworten soll
-  new Array ("(.*)","Est-ce que vous avez des loisirs ?", "D'accord, je comprends continuez s'il vous plaît...", "De quoi nous parlons exactement ?", "Est-ce que vous pouvez retourner au sujet auparavant s'il vous plaît ?", "heu, j'ai le sentiment que la conversation va n'importe où...",  "ohh vraiment ?",  "heu, c'est comme ca ?", "S'il vous plaît, racontez plus.","Laissons nous changer le sujet... Racontez la famille, s'il vous plaît.","Est-ce que vous pouvez l'exposer ?","D'accord.","Très intéressant.", "Je comprends.  Et qu'est-ce que cela nous disons ?","Comment vous vous sentez quand vous pensez à cela ?","Comment vous vous sentez quand vous disez cela ?","If you had to have one piece of music softly playing in your mind for the rest of your life, what would you want it to be?","What room of your home do you spend the most time in?","If you could go back in time and become friends with one famous person, whom would you chose?","Which of the seven dwarfs personifies you best Dopey, Sneezy, Sleepy, Bashful, Grumpy, Happy, or Doc?","Which animal would you leave out of the ark?"));
+  new Array ("(.*)","Est-ce que vous avez des loisirs ?", "D'accord, je comprends continuez s'il vous plaît...", "De quoi nous parlons exactement ?", "Est-ce que vous pouvez retourner au sujet auparavant s'il vous plaît ?", "heu, j'ai le sentiment que la conversation va n'importe où...",  "ohh vraiment ?",  "heu, c'est comme ca ?", "S'il vous plaît, racontez plus.","Laissons nous changer le sujet... Racontez ta famille, s'il vous plaît.","Est-ce que vous pouvez l'exposer ?","D'accord.","Très intéressant.", "Je comprends.  Et qu'est-ce que cela nous disons ?","Comment vous vous sentez quand vous pensez à cela ?","Comment vous vous sentez quand vous disez cela ?","If you had to have one piece of music softly playing in your mind for the rest of your life, what would you want it to be?","What room of your home do you spend the most time in?","If you could go back in time and become friends with one famous person, whom would you chose?","Which of the seven dwarfs personifies you best Dopey, Sneezy, Sleepy, Bashful, Grumpy, Happy, or Doc?","Which animal would you leave out of the ark?"));
 
 
 uinput = ""
